[package]
name = "rezervo-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
redis = "0.32.0"
